--- a/womens.htm
+++ b/womens.htm
@@ -1,9 +1,9 @@
 <html>
 <head>
- <H1 align=center><font face="SHOWCARD GOTHIC" size="360"><big>TRENDZ</big></font> </H1>
 <title> TRENDZ </title>
 </head>
 <body background="background.jpg">
+ <H1 align=center><font face="SHOWCARD GOTHIC" size="360" style="padding:20px"><big>TRENDZ</big></font> </H1>
 <table border cellspacing="0" width="100%" height="5%" bgcolor="ffffff">
 <tr>
  <th><a href="index.htm">HOMEPAGE</a></th>
