--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
- <H1 align=center><font face="SHOWCARD GOTHIC" size="360"><big>TRENDZ</big></font> </H1>
+ <H1 align="center"><font face="SHOWCARD GOTHIC" size="360"><big>TRENDZ</big></font> </H1>
 <title> TRENDZ </title>
 </head>
 <body background="background.jpg">
